# Programming-Notes

./: .gitignore  .gitlab-ci.yml  Makefile  bibtex.json  conf.py  index.rst  init-env.sh  readme.md  refs.bib  requirements.txt  todo
algorithms/: index.rst  ref.bib  set.rst  sort.rst
android/: bazel.rst  index.rst  ndk.rst
apue/: errno.rst  fd_set.rst  file_io.rst  index.rst  pipe.rst  references.rst
arm/: a64_asm.rst  index.rst  inline_assembly.rst  neon.rst  neon_intrinsics.rst  qemu.rst  todo.rst
bash/: awk.rst  basics.rst  index.rst  sed.rst  timezone.rst
books/: cs.rst  index.rst
cmake/: basics.rst  basics2.rst  compilers.rst  index.rst  todo.rst
compilers/: asan.rst  bison.rst  cfg.rst  cmake.rst  flex.rst  index.rst  install_gcc.rst  llvm.rst  macros.rst  makefile.rst  references.rst  symbols.rst  todo.rst
cpp/: abi.rst  algorithms.rst  avx.rst  clang.rst  conferences.rst  courses.rst  cppcheck.rst  cppcon.rst  cpplint.rst  crt.rst  ebo.rst  exception.rst  faq.rst  gcc.rst  gdb.rst  graphviz.rst  index.rst  libc.rst  memory.rst  new.rst  perf.rst  rpc.rst  style_guide.rst  tmux.rst  todo.rst  ubuntu.rst  x86_asm.rst
cpp/open-source-projects/code/bazel/: BUILD.bazel  hello.cc
cpp/open-source-projects/code/ruy/: BUILD.bazel  Makefile  WORKSPACE  hello_profiler.cc  hello_ruy.cc
cuda/: basics.rst  cmake.rst  examples.rst  index.rst  install.rst  nvtx.rst  references.rst
deep_learning/: frameworks.rst  index.rst  layers.rst  normalization.rst  quantization.rst  ref.bib
docker/: basics.rst  dockerfile.rst  index.rst  install.rst  todo.rst
docs/: .buildinfo  genindex.html  index.html  introduction.html  objects.inv  search.html  searchindex.js
example_exhale_api/: dir_blog.rst  file_blog_sphinx_code_test.h.rst  file_view_hierarchy.rst  function_test_8h_1a426483f44b0646cc1da60c48a3abe737.rst  program_listing_file_blog_sphinx_code_test.h.rst  unabridged_orphan.rst
german/: index.rst  references.rst
git/: auto-complete.rst  branch.rst  config.rst  gerrit.rst  github_markdown.rst  github_workflow.rst  gitlab_runner.rst  index.rst  lfs.rst  rebase.rst  remote.rst  repo.rst  submodule.rst  tag.rst  yaml_notes.rst
go/: basics.rst  exercise1.rst  exercise2.rst  index.rst  install.rst  references.rst  todo.rst
kaldi/: arpa.rst  asr_papers.rst  code-notes.rst  data_preparation.rst  egs.rst  fbank.rst  gmm.rst  how-to-train-a-model.rst  index.rst  lattices.rst  lm.rst  openfst.rst  pysoundfile.rst  ref.bib  sox.rst  srilm.rst  todo.rst  tokenizer.rst  train_mono.rst  transition_model.rst  useful_scripts.rst
latex/: README.md  compile.rst  docker.rst  index.rst  latex-basics.rst  references.rst  texlive.rst  tikz-examples.rst  tikz.rst  todo.rst
llvm/: index.rst  install.rst  ir.rst
mace/: index.rst  internals.rst
math/: index.rst  people.rst
os/: abi.rst  architecture.rst  call_convention.rst  courses.rst  day0.rst  day1.rst  day2.rst  elf_note.rst  environment_setup.rst  hard_disks.rst  index.rst  macos.rst  papers.rst  ref.bib  shared_libraries.rst  syscall_note.rst  system_programming.rst  todo.rst  useful_commands.rst  virtualbox.rst  x86_asm.rst
pybind/: cmake.rst  index.rst  install.rst  internals.rst  make.rst  setup.rst
pybind/code/: .bazelrc  BUILD.bazel  BUILD.tpl  CMakeLists.txt  Makefile  WORKSPACE  array_test.cc  attr_test.cc  basics_test.cc  classes.cc  doc_test.cc  handle_test.cc  header.h  hello.cc  object_test.cc  python_repo.bzl  setup.py  test.py  vector_test.cc
pybind/code/docs/: k2.py  requirements.txt
pybind/code/docs/source/: conf.py  index.rst  test.rst
python/: anaconda.rst  argparse.rst  attributes.rst  basics.rst  c_api.rst  c_api_exercise.rst  c_api_long_object.rst  click.rst  collections.rst  context_manager.rst  coverage.rst  cupy.rst  decimal.rst  descriptors.rst  example_setup.rst  flake8.rst  flask.rst  functions.rst  generator.rst  index.rst  iterator.rst  json.rst  jupyter.rst  logging.rst  magic_methods.rst  metaclass.rst  miniconda.rst  modules.rst  mypy.rst  new.rst  os.rst  pathlib.rst  pdb.rst  pip.rst  platform.rst  print.rst  pyenv.rst  pytest.rst  re.rst  set.rst  (+12 more)
pytorch/: aten.rst  audio.rst  c10.rst  container.rst  dataset.rst  ddp.rst  extension.rst  index.rst  install.rst  internals.rst  module.rst  open-source.rst  optim.rst  profiling.rst  seed.rst  show-info.rst  tensor.rst  torchscript.rst  transformers.rst  useful_functions.rst
pytorch/code/examples/: CMakeLists.txt  allocator.cc  array_ref_test.cc  cuda.cc  custom_class.cc  device.cc  device_type.cc  hello.cc  intrusive_ptr_test.cc  ivalue.cc  main.cc  optional.cc  qualified_name.cc  scalar_type.cc  storage_impl.cc  tensor.cc  tensor_options.cc  todo.md  type_meta.cc
pytorch/code/extensions/: .gitignore  CMakeLists.txt  Makefile  hello.cc  setup.py
rpc/: index.rst  open-source.rst
rust/: basics.rst  index.rst  install.rst  todo.rst
security/: colab.rst  http.rst  index.rst  onedrive.rst  todo.rst  tools.rst  web.rst
sphinx/: exhale.rst  index.rst  install.rst  open-sources.rst  rst_basics.rst
ssh/: config.rst  ec2.rst  index.rst  port_forward.rst  trojan.rst  v2ray.rst  windows.rst
tensorflow/: basics.rst  index.rst
tools/: gimp.rst  index.rst
tts/: hts.rst  index.rst  ref.bib  references.rst  speech-separation.bib  speech-separation.rst
unp/: basics.rst  index.rst  references.rst
vim/: ctags.rst  hexedit.rst  index.rst
xm/: attention.rst  daily_notes.rst  gtn.rst  index.rst  lhotse.rst  paper_reading.rst  people.rst  rnnlm.rst  (+5 more)
(+596 files in other folders)
