package(default_visibility = ["//visibility:public"])

config_setting(
    name = "foo",
    define_values = {
        "foo": "bar",  # matches --define foo=bar
    },
)

cc_binary(
    name = "hello",
    srcs = ["hello.cc"],
    defines = select({
        ":foo": ["FOO"],
        "//conditions:default": [],
    }),
)
